rust/surrealdb-query-builder/src/statements/snapshots/surrealdb_query_builder__statements__transaction__tests__transaction_commit-2.snap
---
source: surrealdb-query-builder/src/statements/transaction.rs
expression: transaction.to_raw().build()
---
BEGIN TRANSACTION;

SELECT * FROM user:oyelowo WHERE (city IS 'Prince Edward Island') AND (city IS 'NewFoundland') OR (city ~ 'Toronto') ORDER BY age NUMERIC ASC LIMIT 153 START AT 10 PARALLEL;

SELECT * FROM user:oyedayo WHERE country IS 'INDONESIA' ORDER BY age NUMERIC ASC LIMIT 20 START AT 5;

COMMIT TRANSACTION;
	
