rust/surrealdb-query-builder/src/statements/snapshots/surrealdb_query_builder__statements__transaction__tests__transaction_commit.snap
---
source: surrealdb-query-builder/src/statements/transaction.rs
expression: transaction.fine_tune_params()
---
BEGIN TRANSACTION

SELECT * FROM $_param_00000001 WHERE (city IS $_param_00000002) AND (city IS $_param_00000003) OR (city ~ $_param_00000004) ORDER BY age NUMERIC ASC LIMIT $_param_00000005 START AT $_param_00000006 PARALLEL;

SELECT * FROM $_param_00000007 WHERE country IS $_param_00000008 ORDER BY age NUMERIC ASC LIMIT $_param_00000009 START AT $_param_00000010;

COMMIT TRANSACTION
	
